crates/pandalang/src/snapshots/pandalang__parser__tests__parses@str__empty.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test(path)
input_file: crates/pandalang/src/snapshot_inputs/str/empty.panda
---
Ok(
    Str(
        Str {
            s: "",
        },
    ),
)
