crates/pandalang/src/snapshots/pandalang__parser__tests__parses@str__str.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test(path)
input_file: crates/pandalang/src/snapshot_inputs/str/str.panda
---
Ok(
    Str(
        Str {
            s: "hello world",
        },
    ),
)
